// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /user/name/:username/profile/ endpoint Success 1`] = `
{
  "backgroundPicPath": null,
  "id": "675351d698452e4fadc376be",
  "isFollowing": false,
  "name": "hi there",
  "numFollowers": 1,
  "numFollowing": 0,
  "profilePicPath": null,
  "username": "username",
}
`;

exports[`GET /user/name/:username/profile/ endpoint Success isFollowing 1`] = `
{
  "backgroundPicPath": null,
  "id": "675351d698452e4fadc376be",
  "isFollowing": true,
  "name": "hi there",
  "numFollowers": 1,
  "numFollowing": 0,
  "profilePicPath": null,
  "username": "username",
}
`;
